# pyflexfloat

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml  publish-pypi.yaml
pyflexfloat/: FlexFloat.py  __init__.py  build_flexfloat_ffi.py  func.py  util.py
test/: test.py
